# OAuth2

./: .env.example  .gitignore  CURRENT_STATUS.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.pure-scratch  Dockerfile.ultra-secure  HOW_TO_RUN.md  LICENSE  README.md  docker-compose.yml  nginx.conf  test_db.sh
migrations/: 001_initial.sql
scripts/: deploy.sh
src/: abandoned_checkouts.rs  database.rs  http_client.rs  main.rs  middleware.rs  shopify_api.rs  tests.rs  webhooks.rs
