[package]
name = "shopify-oauth-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL parsing and encoding
url = "2.4"
urlencoding = "2.1"

# Environment variables
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# UUID generation (for CSRF state)
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid", "bigdecimal"] }

# Decimal support for survey analytics  
rust_decimal = { version = "1.33", features = ["serde"] }

# Encryption
aes-gcm = "0.10"
base64 = "0.21"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Rate limiting
tower_governor = "0.4"
redis = { version = "0.23", features = ["tokio-comp"] }

# Security
secrecy = "0.8"

# Retry logic
tokio-retry = "0.3"

# Additional HTTP features
reqwest-retry = "0.2"
reqwest-middleware = "0.2"

# Cryptography for webhooks
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Development dependencies
[dev-dependencies]
serde_urlencoded = "0.7"
tower = { version = "0.4", features = ["util"] }
criterion = "0.5"